--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@ bld/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
+
+
+*.suo
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
@@ -338,3 +341,5 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+
+**/src/wechaty-grpc-webapi/.vs/**
